@@ -22,17 +22,17 @@ namespace Rivet {
     _num90Max1800 = bookProfile1D(4, 1, 1, "Nmax vs ET at sqrt{s} = 1800 GeV");
     _num90Min1800 = bookProfile1D(4, 1, 2, "Nmin vs ET at sqrt{s} = 1800 GeV");
     /// @todo Fix auto-binning of last bin
-    _numTracksDbn1800 = bookHistogram1D(5, 1, 1, "Track multiplicity distribution at sqrt{s} = 1800 GeV");
-    _ptDbn1800 = bookHistogram1D(6, 1, 1, "pT distribution at sqrt{s} = 1800 GeV");
+    _numTracksDbn1800 = bookHistogram1D(5, 1, 1, "Min bias track multiplicity distribution at sqrt{s} = 1800 GeV");
+    _ptDbn1800 = bookHistogram1D(6, 1, 1, "Min bias pT distribution at sqrt{s} = 1800 GeV");
     /// @todo Missing 0.4-10 GeV pT histo (lots of bins...)
-    _pTSum1800_2Jet = bookProfile1D(7, 1, 1, "pTsum vs ET (for removal of 2 jets) at sqrt{s} = 1800 GeV");
-    _pTSum1800_3Jet = bookProfile1D(7, 1, 2, "pTsum vs ET (for removal of 3 jets) at sqrt{s} = 1800 GeV");            
+    _pTSum1800_2Jet = bookProfile1D(7, 1, 1, "Swiss Cheese pTsum vs ET (for removal of 2 jets) at sqrt{s} = 1800 GeV");
+    _pTSum1800_3Jet = bookProfile1D(7, 1, 2, "Swiss Cheese pTsum vs ET (for removal of 3 jets) at sqrt{s} = 1800 GeV");            
     _pt90Max630 = bookProfile1D(8, 1, 1, "pTmax vs ET at sqrt{s} = 630 GeV");
     _pt90Min630 = bookProfile1D(8, 1, 2, "pTmin vs ET at sqrt{s} = 630 GeV");
-    /// @todo Problem with HepData indexes?
+    /// @todo Need diff profile in HepData
     //_pt90Diff630 = bookProfile1D(8, 1, 3, "pTdiff vs ET at sqrt{s} = 630 GeV");
-    _pTSum630_2Jet = bookProfile1D(9, 1, 1, "pTsum vs ET (for removal of 2 jets) at sqrt{s} = 630 GeV");
-    _pTSum630_3Jet = bookProfile1D(9, 1, 2, "pTsum vs ET (for removal of 3 jets) at sqrt{s} = 630 GeV");
+    _pTSum630_2Jet = bookProfile1D(9, 1, 1, "Swiss Cheese pTsum vs ET (for removal of 2 jets) at sqrt{s} = 630 GeV");
+    _pTSum630_3Jet = bookProfile1D(9, 1, 2, "Swiss Cheese pTsum vs ET (for removal of 3 jets) at sqrt{s} = 630 GeV");
     /// @todo Num tracks and pT histos for 630 GeV
   }
 
